--- a/server/release.json
+++ b/server/release.json
@@ -1,4 +1,5 @@
 [ {
+"page":"unel-app/api.unel.tv/release/1.json",
 "url":"https://aniqaz.github.io/server/web-server/image/hd-1.png",
 "title":"Сенің есімің",
 "grade":"1 эп • 4.9★",
