--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,12 @@
 [ {
-"page":"unel-app/api.unel.tv/release/1.json",
+"img":"https://aniqaz.github.io/server/web-server/image/hd-1.png",
+"kz":"Сенің есімің",
+"en":"君の名は, Kimi no na wa",
+"country":"Япония, 3 шілде 2016ж",
+"infore":"1эп ~ 102мин/01:42",
+"infodata":"Фильм, шықты",
+"infostudio":"Студия CoMix Wave, автор Макото Синкай",
+"desc":"Токио жігіті Таки мен провинциялық қыз Мицуханың арасында біртүрлі байланыс бар екенін білінеді. Түстерінде олар бір-бірінің өмірлерін сүреді. Бірақ бір күні бұл қабілет қалай пайда болса,солай кенеттен жоғалып кетеді. Таки ештеңеге қарамастан Мицуханы табуға бел буады.",
 "url":"https://aniqaz.github.io/server/web-server/image/hd-1.png",
 "title":"Сенің есімің",
 "grade":"1 эп • 4.9★",
