--- a/server/release.json
+++ b/server/release.json
@@ -13,7 +13,16 @@
 "info":"Токио жігіті Таки мен провинциялық қыз Мицуханың арасында біртүрлі байланыс бар екенін білінеді. Түстерінде олар бір-бірінің өмірлерін сүреді. Бірақ бір күні бұл қабілет қалай пайда болса,солай кенеттен жоғалып кетеді. Таки ештеңеге қарамастан Мицуханы табуға бел буады",
 "link":"https://sites.google.com/view/aniqaz-app/kimi-no-na-wa"
  },
-{ "url":"https://aniqaz.github.io/server/web-server/image/Chainsaw-Man.png",
+{ 
+"img":"https://aniqaz.github.io/server/web-server/image/hd-1.png",
+"kz":"Сенің есімің",
+"en":"君の名は, Kimi no na wa",
+"country":"Япония, 3 шілде 2016ж",
+"infore":"1эп ~ 102мин/01:42",
+"infodata":"Фильм, шықты",
+"infostudio":"Студия CoMix Wave, автор Макото Синкай",
+"desc":"Токио жігіті Таки мен провинциялық қыз Мицуханың арасында біртүрлі байланыс бар екенін білінеді. Түстерінде олар бір-бірінің өмірлерін сүреді. Бірақ бір күні бұл қабілет қалай пайда болса,солай кенеттен жоғалып кетеді. Таки ештеңеге қарамастан Мицуханы табуға бел буады.",
+"url":"https://aniqaz.github.io/server/web-server/image/Chainsaw-Man.png",
 "title":"Шынжырлы Ара Адам",
 "grade":"3 из 12 эп • 4.9★",
 "info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде."
