--- a/server/release.json
+++ b/server/release.json
@@ -14,8 +14,8 @@
 "link":"https://sites.google.com/view/aniqaz-app/kimi-no-na-wa"
  },
 { 
-"img":"https://aniqaz.github.io/server/web-server/image/hd-1.png",
-"kz":"Сенің есімің",
+"img":"https://aniqaz.github.io/server/web-server/image/Chainsaw-Man.png",
+"kz":"Шынжырлы Ара Адам",
 "en":"君の名は, Kimi no na wa",
 "country":"Япония, 3 шілде 2016ж",
 "infore":"1эп ~ 102мин/01:42",
