--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,4 @@
 [ {
-"page":"https://raw.githubusercontent.com/unel-app/api.unel.tv/main/release/2.json",
 "url":"https://aniqaz.github.io/server/web-server/image/hd-1.png",
 "title":"Сенің есімің",
 "grade":"1 эп • 4.9★",
@@ -14,5 +13,9 @@
 "url":"https://aniqaz.github.io/server/web-server/image/Chainsaw-Man.png",
 "title":"Шынжырлы Ара Адам",
 "grade":"3 из 12 эп • 4.9★",
-"info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде."
+"info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде.",
+"jp":"チェンソーマン, Chainsaw Man",
+"info1":"24 минуттан ~ 12 бөлім",
+"info2":"Көп бөлімді, әр сейсенбі сайын шығады",
+"info3":"Студия MAPPA, автор Тацуки Фудзимото"
 }]
