--- a/server/release.json
+++ b/server/release.json
@@ -10,7 +10,7 @@
 "info3":"Студия CoMix Wave, автор Макото Синкай."
  },
 { 
-"url":"https://aniqaz.github.io/server/web-server/image/Chainsaw-Man.png",
+"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
 "title":"Шынжырлы Ара Адам",
 "grade":"3 из 12 эп • 4.9★",
 "info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде.",
