--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,5 @@
 [ {
-"url":"https://aniqaz.github.io/server/web-server/image/hd-1.png",
+"url":"https://unel-app.github.io/api.unel.tv/web-server/image/hd-1.png",
 "title":"Сенің есімің",
 "grade":"1 эп • 4.9★",
 "info":"Токио жігіті Таки мен провинциялық қыз Мицуханың арасында біртүрлі байланыс бар екенін білінеді. Түстерінде олар бір-бірінің өмірлерін сүреді. Бірақ бір күні бұл қабілет қалай пайда болса,солай кенеттен жоғалып кетеді. Таки ештеңеге қарамастан Мицуханы табуға бел буады",
