--- a/server/release.json
+++ b/server/release.json
@@ -10,12 +10,13 @@
 "info3":"Студия CoMix Wave, автор Макото Синкай."
  },
 { 
-"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
-"title":"Шынжырлы Ара Адам",
-"grade":"3 из 12 эп • 4.9★",
-"info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде.",
-"jp":"チェンソーマン, Chainsaw Man",
-"info1":"24 минуттан ~ 12 бөлім",
-"info2":"Көп бөлімді, әр сейсенбі сайын шығады",
-"info3":"Студия MAPPA, автор Тацуки Фудзимото"
+"url":"https://unel-app.github.io/api.unel.tv/web-server/image/hd-1.png",
+"title":"Сенің есімің",
+"grade":"1 эп • 4.9★",
+"info":"Токио жігіті Таки мен провинциялық қыз Мицуханың арасында біртүрлі байланыс бар екенін білінеді. Түстерінде олар бір-бірінің өмірлерін сүреді. Бірақ бір күні бұл қабілет қалай пайда болса,солай кенеттен жоғалып кетеді. Таки ештеңеге қарамастан Мицуханы табуға бел буады",
+"jp":"君の名は, Kimi no na wa",
+"country":"Япония, 3 шілде 2016",
+"info1":"1-бөлімнен тұрады, 102 минут/01:42",
+"info2":"Толықметражды, шықты",
+"info3":"Студия CoMix Wave, автор Макото Синкай."
 }]
