--- a/server/release.json
+++ b/server/release.json
@@ -11,10 +11,10 @@
  },
 { 
 "url":"https://unel-app.github.io/api.unel.tv/web-server/image/hd-1.png",
-"title":"Сенің есімің",
-"grade":"1 эп • 4.9★",
+"title":"Сенің есімің 2",
+"grade":"3 из 12 эп • 4.9★",
 "info":"Токио жігіті Таки мен провинциялық қыз Мицуханың арасында біртүрлі байланыс бар екенін білінеді. Түстерінде олар бір-бірінің өмірлерін сүреді. Бірақ бір күні бұл қабілет қалай пайда болса,солай кенеттен жоғалып кетеді. Таки ештеңеге қарамастан Мицуханы табуға бел буады",
-"jp":"君の名は, Kimi no na wa",
+"jp":"君の名は 2, Kimi no na wa 2",
 "country":"Япония, 3 шілде 2016",
 "info1":"1-бөлімнен тұрады, 102 минут/01:42",
 "info2":"Толықметражды, шықты",
