--- a/server/release.json
+++ b/server/release.json
@@ -7,7 +7,8 @@
 "country":"Япония, 3 шілде 2016ж",
 "info1":"1 эп. 102 минут/01:42",
 "info2":"Толықметражды, шықты",
-"info3":"Студия CoMix Wave, автор Макото Синкай."
+"info3":"Студия CoMix Wave, автор Макото Синкай.",
+"is":"https://t.me/ach1ma"
  },
 { 
 "url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
