--- a/server/release.json
+++ b/server/release.json
@@ -8,7 +8,7 @@
 "info1":"1 эп. 102 минут/01:42",
 "info2":"Толықметражды, шықты",
 "info3":"Студия CoMix Wave, автор Макото Синкай.",
-"is":"https://sites.google.com/view/aniqaz-app/kimi-no-na-wa"
+"is":"https://sites.google.com/view/aniqaz-app/kimi-no-na-wa/kimi-no-na-wa-list"
  },
 { 
 "url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
@@ -19,5 +19,6 @@
 "country":"Япония, 11 қазан 2022ж",
 "info1":"3 из 12 эп. 25мин",
 "info2":"Көп бөлімді, әр сейсенбі сайын шығады",
-"info3":"Студия MAPPA, автор Тацуки Фудзимото"
+"info3":"Студия MAPPA, автор Тацуки Фудзимото",
+"is":"https://sites.google.com/view/aniqaz-app/chainsaw-man/chainsaw-man-list"
 }]
