--- a/server/release.json
+++ b/server/release.json
@@ -1,11 +1,22 @@
 [ {
-"url":"https://unel-app.github.io/api.unel.tv/web-server/image/hd-1.png",
+"url":"https://unel-app.github.io/api.unel.tv/web-server/image/aot.png",
+"title":"Титандар Шабуылы",
+"grade":"25 эп • 4.8★",
+"info":"Көптеген жылдар бойы адамзат титандармен - ерекше ақыл-ойы жоқ, бірақ адамдарды жеп, одан ләззат алатын алып тіршілік иелерімен күресіп келеді. Ұзақ күрестен кейін адамзаттың қалдықтары титандар өте алмайтын, адамдар елін қоршап тұратын биік қабырғаларды тұрғызды. Содан бері жүз жыл өтті, адамдар қабырға қорғауында бейбіт өмір сүруде. Бірақ бір күні жасөспірім Эрен мен оның туысы Микаса қорқынышты оқиғаға тап болды - қабырғаның бір бөлігін кенет пайда болған алып титан қиратады. Титандар қалаға шабуыл жасайды, ал балалар титандардң бірі Эреннің анасын тірідей жеп жатқанына куә болды. Эрен барлық титандарды өлтіріп, адамзат үшін кек алатынына ант береді.",
+"jp":"進撃の巨人, Shingeki no Kyojin",
+"country":"Япония,  7 cәуір 2013ж",
+"info1":"25 эп. ~25мин",
+"info2":"Көп бөлімді, толығымен шықты",
+"info3":"Студия Wit Studio, автор Исаяма Хадзимэ",
+"is":"https://sites.google.com/view/unel-app/attack-on-titan-1/attack-on-titan-list"
+},
+{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/hd-1.png",
 "title":"Сенің есімің",
 "grade":"1 эп • 4.9★",
 "info":"Токио жігіті Таки мен провинциялық қыз Мицуханың арасында біртүрлі байланыс бар екенін білінеді. Түстерінде олар бір-бірінің өмірлерін сүреді. Бірақ бір күні бұл қабілет қалай пайда болса,солай кенеттен жоғалып кетеді. Таки ештеңеге қарамастан Мицуханы табуға бел буады",
 "jp":"君の名は, Kimi no na wa",
 "country":"Япония, 3 шілде 2016ж",
-"info1":"1 эп. 102 минут/01:42",
+"info1":"1 эп. ~102 минут/01:42",
 "info2":"Толықметражды, шықты",
 "info3":"Студия CoMix Wave, автор Макото Синкай.",
 "is":"https://sites.google.com/view/unel-app/kimi-no-na-wa/kimi-no-na-wa-list"
@@ -17,7 +28,7 @@
 "info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде.",
 "jp":"チェンソーマン, Chainsaw Man",
 "country":"Япония, 11 қазан 2022ж",
-"info1":"3 из 12 эп. 25мин",
+"info1":"3 из 12 эп. ~25мин",
 "info2":"Көп бөлімді, әр сейсенбі сайын шығады",
 "info3":"Студия MAPPA, автор Тацуки Фудзимото",
 "is":"https://sites.google.com/view/unel-app/chainsaw-man/chainsaw-man-list"
