--- a/server/release.json
+++ b/server/release.json
@@ -1,7 +1,18 @@
 [ {
-"url":"https://unel-app.github.io/api.unel.tv/web-server/image/aot.png",
+"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Ruler-Master-of-the-Mas.png",
+"title":"Бетберденің иесі",
+"grade":"20 эп • 8,9★",
+"info":"Белгісіз",
+"jp":"군주-가면의 주인",
+"country":"Оңтүстік Корея, 10 мамыр 2017ж",
+"info1":"20 эп. ~59мин",
+"info2":"Сериал, толығымен шықты",
+"info3":"Студия ???, автор ???",
+"is":"https://sites.google.com/view/unel-app/the-emperor-owner-of-the-mask/the-emperor-owner-of-the-mask-list"
+},
+{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/aot.png",
 "title":"Титандар Шабуылы",
-"grade":"25 эп • 4.8★",
+"grade":"25 эп • 8,6★",
 "info":"Көптеген жылдар бойы адамзат титандармен - ерекше ақыл-ойы жоқ, бірақ адамдарды жеп, одан ләззат алатын алып тіршілік иелерімен күресіп келеді. Ұзақ күрестен кейін адамзаттың қалдықтары титандар өте алмайтын, адамдар елін қоршап тұратын биік қабырғаларды тұрғызды. Содан бері жүз жыл өтті, адамдар қабырға қорғауында бейбіт өмір сүруде. Бірақ бір күні жасөспірім Эрен мен оның туысы Микаса қорқынышты оқиғаға тап болды - қабырғаның бір бөлігін кенет пайда болған алып титан қиратады. Титандар қалаға шабуыл жасайды, ал балалар титандардң бірі Эреннің анасын тірідей жеп жатқанына куә болды. Эрен барлық титандарды өлтіріп, адамзат үшін кек алатынына ант береді.",
 "jp":"進撃の巨人, Shingeki no Kyojin",
 "country":"Япония,  7 cәуір 2013ж",
@@ -12,7 +23,7 @@
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/hd-1.png",
 "title":"Сенің есімің",
-"grade":"1 эп • 4.9★",
+"grade":"1 эп • 8,4★",
 "info":"Токио жігіті Таки мен провинциялық қыз Мицуханың арасында біртүрлі байланыс бар екенін білінеді. Түстерінде олар бір-бірінің өмірлерін сүреді. Бірақ бір күні бұл қабілет қалай пайда болса,солай кенеттен жоғалып кетеді. Таки ештеңеге қарамастан Мицуханы табуға бел буады",
 "jp":"君の名は, Kimi no na wa",
 "country":"Япония, 3 шілде 2016ж",
@@ -24,7 +35,7 @@
 { 
 "url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
 "title":"Шынжырлы Ара Адам",
-"grade":"3 из 12 эп • 4.9★",
+"grade":"3 из 12 эп • 8,6★",
 "info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде.",
 "jp":"チェンソーマン, Chainsaw Man",
 "country":"Япония, 11 қазан 2022ж",
