--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,17 @@
 [ {
-"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Ruler-Master-of-the-Mas.png",
+"url":"https://unel-app.github.io/api.unel.tv/web-server/image/setbyol.png",
+"title":"Сэт Бёль тәуліктік дүкені",
+"grade":"1 из 20 эп • 9,2★",
+"jp":"편의점 샛별이",
+"country":"Оңтүстік Корея, 19 маусым 2020ж",
+"info":"Чхве Дэ Хен-дүкеннің иесі. Ол сүйкімді, мейірімді, ебедейсіз және жанашыр, сондықтан ол үнемі қиындыққа тап болады. Оған көмектескен әкесі жарақат алған кезде, ол түнгі ауысымда жұмысшы іздеуге мәжбүр болады, содан кейін Чен Сэт бел келеді. Ол өте әдемі және мейірімді, бұл клиенттердің күрт ағынын тудырады, Дэхенмен сүйкімді және ол жақсы жұмыс істейді, бірақ оған бірдеңе дұрыс емес…
+Кенеттен Дэ Хён оны үш жыл бұрын темекі қорапшасын сатып алуды сұраған және бас тартқаннан кейін оны ең дөрекі түрде сүйген мектеп оқушысы деп таниды! Енді ер адам бұл бандитті жұмыстан шығаруға тырысады, бірақ бір нәрсе үнемі кедергі келтіреді. Ия, және Сэт Бельден құтылу оңай болмайды, өйткені мұнда ол өзінің алғашқы және соңғы сүйіспеншілігін алған адамға — дүкеннен әдемі адамға қол жеткізу үшін! Оның қалыңдығынан құтылу ғана қалад.",
+"info1":"1 из 20 эп. ~60мин",
+"info2":"Сериал, дорама қазақ тілінде толығымен шықпады!",
+"info3":"TV SBS, режиссер Ли Мён-у",
+"is":"https://sites.google.com/view/unel-app/set-byol-convenience-store/set-byol-list"
+},
+{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Ruler-Master-of-the-Mas.png",
 "title":"Бетберденің иесі",
 "grade":"20 эп • 8,9★",
 "info":"Белгісіз",
