--- a/server/release.json
+++ b/server/release.json
@@ -8,7 +8,7 @@
 Кенеттен Дэ Хён оны үш жыл бұрын темекі қорапшасын сатып алуды сұраған және бас тартқаннан кейін оны ең дөрекі түрде сүйген мектеп оқушысы деп таниды! Енді ер адам бұл бандитті жұмыстан шығаруға тырысады, бірақ бір нәрсе үнемі кедергі келтіреді. Ия, және Сэт Бельден құтылу оңай болмайды, өйткені мұнда ол өзінің алғашқы және соңғы сүйіспеншілігін алған адамға — дүкеннен әдемі адамға қол жеткізу үшін! Оның қалыңдығынан құтылу ғана қалад.",
 "info1":"1 из 20 эп. ~60мин",
 "info2":"Сериал, дорама қазақ тілінде толығымен шықпады!",
-"info3":"TV SBS, режиссер Ли Мён-у",
+"info3":"Студия SBS, режиссер Ли Мён-у",
 "is":"https://sites.google.com/view/unel-app/set-byol-convenience-store/set-byol-list"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Ruler-Master-of-the-Mas.png",
