--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,16 @@
 [ {
-"url":"https://unel-app.github.io/api.unel.tv/web-server/image/setbyol.png",
+"url":"https://i.pinimg.com/originals/45/95/b0/4595b011ec0278865da5f5d33ca7de29.png",
+"title":"Бог Усопп",
+"grade":"999 эп • 1000★/10★",
+"jp":"Herr Знает",
+"country":"Қазақстанда туылған",
+"info":"Бұл Бог Усопп-тың оқиғалары деген жаңа кино",
+"info1":"999 из 9999 эп. ~99мин",
+"info2":"Сериал, әлі 100жыл шығады",
+"info3":"UneL TV, автор Seele",
+"is"https://sites.google.com/view/unel-app/set-byol-convenience-store/set-byol-list"
+},
+{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/setbyol.png",
 "title":"Сэт Бёль тәуліктік дүкені",
 "grade":"1 из 20 эп • 9,2★",
 "jp":"편의점 샛별이",
