--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,16 @@
 [ {
-"url":"https://i.pinimg.com/originals/45/95/b0/4595b011ec0278865da5f5d33ca7de29.png",
+"url":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnc3ZF9zsKeXd0horGFQl1hI5-Qe8EbxvB4A&usqp=CAU",
+"title":"Елеспен Шайқас",
+"grade":"16 эп • 9,3★",
+"jp":"Давай сразимся призрак",
+"country":"Оңтүстік Корея, 2016ж",
+"info":"???",
+"info1":"16 эп. ~60мин",
+"info2":"Сериал, шықты",
+"info3":"TV SBS, автор белгісіз",
+"is":"https://t.me/ach1ma"
+},
+{"url":"https://i.pinimg.com/originals/45/95/b0/4595b011ec0278865da5f5d33ca7de29.png",
 "title":"Бог Усопп",
 "grade":"999 эп • 1000★/10★",
 "jp":"Herr Знает",
