--- a/server/release.json
+++ b/server/release.json
@@ -9,7 +9,8 @@
 "info1":"1 из 20 эп. ~60мин",
 "info2":"Сериал, толығымен шықты",
 "info3":"TV SBS, режиссер Ли Мён-у",
-"is":"https://sites.google.com/view/unel-app/set-byol-convenience-store/set-byol-list"
+"is":"https://sites.google.com/view/unel-app/set-byol-convenience-store/set-byol-list",
+"description":"Комедия, Мелодрама"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Ruler-Master-of-the-Mas.png",
 "title":"Бетберденің иесі",
@@ -21,6 +22,7 @@
 "info2":"Сериал, толығымен шықты",
 "info3":"Студия ???, автор ???",
 "is":"https://sites.google.com/view/unel-app/the-emperor-owner-of-the-mask/the-emperor-owner-of-the-mask-list"
+"description":"Тарихи, Дорама"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/aot.png",
 "title":"Титандар Шабуылы",
@@ -31,7 +33,8 @@
 "info1":"25 эп. ~25мин",
 "info2":"Көп бөлімді, толығымен шықты",
 "info3":"Студия Wit Studio, автор Исаяма Хадзимэ",
-"is":"https://sites.google.com/view/unel-app/attack-on-titan-1/attack-on-titan-list"
+"is":"https://sites.google.com/view/unel-app/attack-on-titan-1/attack-on-titan-list",
+"description":"экшен, фэнтези, драма, хоррор"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/hd-1.png",
 "title":"Сенің есімің",
@@ -42,7 +45,8 @@
 "info1":"1 эп. ~102 минут/01:42",
 "info2":"Толықметражды, шықты",
 "info3":"Студия CoMix Wave, автор Макото Синкай.",
-"is":"https://sites.google.com/view/unel-app/kimi-no-na-wa/kimi-no-na-wa-list"
+"is":"https://sites.google.com/view/unel-app/kimi-no-na-wa/kimi-no-na-wa-list",
+"description":"Романтика, мектеп, тылсым дүние"
  },
 { 
 "url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
@@ -54,5 +58,6 @@
 "info1":"3 из 12 эп. ~25мин",
 "info2":"Көп бөлімді, әр сейсенбі сайын шығады",
 "info3":"Студия MAPPA, автор Тацуки Фудзимото",
-"is":"https://sites.google.com/view/unel-app/chainsaw-man/chainsaw-man-list"
+"is":"https://sites.google.com/view/unel-app/chainsaw-man/chainsaw-man-list",
+"description":"Экшен, демоны, хоррор, сёнен"
 }]
