--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,17 @@
 [ {
-"url":"https://unel-app.github.io/api.unel.tv/web-server/image/setbyol.png",
+"url":"https://doramy.club/wp-content/uploads/2017/06/davaj-srazhatsya-prizrak.jpg",
+"title":"Елеспен Шайқас",
+"grade":"16 эп • 7,7★",
+"jp":"싸우자 귀신아",
+"country":"Оңтүстік Корея, 11 шілде 2016ж",
+"info":"Бұл телехикая үнемі көзіне елестер көрінетін Бон Паль есімді жігіт жайында. Бала күнінде елестерден қатты қорқып өскен ол, есейе келе олармен шайқасуды негізгі жұмысына айналдырады. Өзге адамдардың өтініші бойынша ол үнемі ақшаға елестермен шайқасу қызметін атқарады. Осылайша күндердің бірінде сол елестердің біріне қалай ғашық болып қалғанын байқамай қалады. Елес пен адам арасындағы махаббат өзге адамдарға түсініксіз жағдайда өрбиді. Бон Пальдің махабаты елестің қайта тірілуіне үлкен әсерін тигізеді. Елеспен махабатқа толы телехикаяны жіберіп алмаңыздар.",
+"info1":"16 эп. ~59мин",
+"info2":"Сериал, толығымен шықты!",
+"info3":"Студия  ???, автор ???",
+"is":"https://sites.google.com/view/unel-app/ssauja-gwisina",
+"description":"Комедия, Мелодрама, Мистика"
+},
+{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/setbyol.png",
 "title":"Сэт Бёль тәуліктік дүкені",
 "grade":"1 из 20 эп • 9,2★",
 "jp":"편의점 샛별이",
