--- a/server/release.json
+++ b/server/release.json
@@ -1,6 +1,7 @@
 [ {
-"warning":"",
-"url":"https://doramy.club/wp-content/uploads/2017/06/davaj-srazhatsya-prizrak.jpg",
+"warning":""
+},
+{"url":"https://doramy.club/wp-content/uploads/2017/06/davaj-srazhatsya-prizrak.jpg",
 "title":"Елеспен Шайқас",
 "grade":"16 эп • 7,7★",
 "jp":"싸우자 귀신아",
