--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,5 @@
 [ {
-{"url":"https://doramy.club/wp-content/uploads/2017/06/davaj-srazhatsya-prizrak.jpg",
+"url":"https://doramy.club/wp-content/uploads/2017/06/davaj-srazhatsya-prizrak.jpg",
 "title":"Елеспен Шайқас",
 "grade":"16 эп • 7,7★",
 "jp":"싸우자 귀신아",
