--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,17 @@
 [ {
-"url":"https://doramy.club/wp-content/uploads/2017/06/davaj-srazhatsya-prizrak.jpg",
+"url":"https://vk.com/photo-177853833_457245253",
+"title":"Каратэ Бала",
+"grade":"1 эп • 8,2★",
+"jp":"Karate",
+"country":"Китай, 2010ж",
+"info":"Он екі жасар Дре Паркер жалғызбасты анасымен бірге Детройттан бейтаныс Бейжіңге тіл мен жергілікті дәстүрді білмей көшіп келеді.  Мұнда ол қытай қызы Мэй Инмен танысады.  Алайда, оның жолына мәдени аласапырандықтан олардың достығын құптамайтын әкесінен бөлек, кунг-фу өнерін жетік білетін Чен бастаған бұзақылар тобы да кедергі жасайды.  Оны жеңудің жалғыз жолы - алдағы жекпе-жек турнирінде жаумен бетпе-бет келу.  Бұл жағдайда жекпе-жек шебері Хан мырза балаға көмектесуді шешеді.",
+"info1":"1 эп. ~2 сағат 34 мин",
+"info2":"Фильм, шықты",
+"info3":"Студия ???, автор ???",
+"is":"false",
+"description":"Драма, спорт"
+},
+{"url":"https://doramy.club/wp-content/uploads/2017/06/davaj-srazhatsya-prizrak.jpg",
 "title":"Елеспен Шайқас",
 "grade":"16 эп • 7,7★",
 "jp":"싸우자 귀신아",
