--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,5 @@
 [ {
-"url":"https://vk.com/photo-177853833_457245253",
+"url":"https://upload.wikimedia.org/wikipedia/ru/9/92/Karate_Kid_2010.jpg",
 "title":"Каратэ Бала",
 "grade":"1 эп • 8,2★",
 "jp":"Karate",
