--- a/server/release.json
+++ b/server/release.json
@@ -9,7 +9,8 @@
 "info2":"Фильм, шықты",
 "info3":"Студия ???, автор ???",
 "is":"https://sites.google.com/view/unel-app/%D0%BA%D0%B0%D1%80%D0%B0%D1%82%D1%8D-%D0%BF%D0%B0%D1%86%D0%B0%D0%BD",
-"description":"Драма, спорт"
+"description":"Драма, спорт",
+"note":false"
 },
 {"url":"https://doramy.club/wp-content/uploads/2017/06/davaj-srazhatsya-prizrak.jpg",
 "title":"Елеспен Шайқас",
@@ -21,7 +22,8 @@
 "info2":"Сериал, толығымен шықты!",
 "info3":"Студия  ???, автор ???",
 "is":"https://sites.google.com/view/unel-app/ssauja-gwisina",
-"description":"Комедия, Мелодрама, Мистика"
+"description":"Комедия, Мелодрама, Мистика",
+"note":"Ескертулер жоқ!😊"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/setbyol.png",
 "title":"Сэт Бёль тәуліктік дүкені",
@@ -34,7 +36,8 @@
 "info2":"Сериал, толығымен шықты",
 "info3":"TV SBS, режиссер Ли Мён-у",
 "is":"https://sites.google.com/view/unel-app/set-byol-list",
-"description":"Комедия, Мелодрама"
+"description":"Комедия, Мелодрама",
+"note":"Ескертулер жоқ!😊"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Ruler-Master-of-the-Mas.png",
 "title":"Бетберденің иесі",
@@ -46,7 +49,8 @@
 "info2":"Сериал, толығымен шықты",
 "info3":"Студия ???, автор ???",
 "is":"https://sites.google.com/view/unel-app/the-emperor-owner-of-the-mask-list",
-"description":"Тарихи, Дорама"
+"description":"Тарихи, Дорама",
+"note":"Ескертулер жоқ!😊"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/aot.png",
 "title":"Титандар Шабуылы",
@@ -58,7 +62,8 @@
 "info2":"Көп бөлімді, толығымен шықты",
 "info3":"Студия Wit Studio, автор Исаяма Хадзимэ",
 "is":"https://sites.google.com/view/unel-app/attack-on-titan-list",
-"description":"экшен, фэнтези, драма, хоррор"
+"description":"экшен, фэнтези, драма, хоррор",
+"note":"Ескертулер жоқ!😊"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/hd-1.png",
 "title":"Сенің есімің",
@@ -70,7 +75,8 @@
 "info2":"Толықметражды, шықты",
 "info3":"Студия CoMix Wave, автор Макото Синкай.",
 "is":"https://sites.google.com/view/unel-app/kimi-no-na-wa-list",
-"description":"Романтика, мектеп, тылсым дүние"
+"description":"Романтика, мектеп, тылсым дүние",
+"note":"Ескертулер жоқ!😊"
  },
 { 
 "url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
@@ -83,5 +89,6 @@
 "info2":"Көп бөлімді, әр сейсенбі сайын шығады",
 "info3":"Студия MAPPA, автор Тацуки Фудзимото",
 "is":"https://sites.google.com/view/unel-app/chainsaw-man-list",
-"description":"Экшен, демоны, хоррор, сёнен"
+"description":"Экшен, демоны, хоррор, сёнен",
+"note":"Ескертулер жоқ!😊"
 }]
