--- a/server/release.json
+++ b/server/release.json
@@ -37,7 +37,7 @@
 "info3":"TV SBS, режиссер Ли Мён-у",
 "is":"https://sites.google.com/view/unel-app/set-byol-list",
 "description":"Комедия, Мелодрама",
-"note":"Ескертулер жоқ!😊"
+"note":"Біздің источникте қазақша субтитрмен тек 1 бөлім ғана қол жетімді, егерде дорама біздің қосымшада танымалдық жинаса қалған 15 бөлім де қосуға уәде береміз!"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Ruler-Master-of-the-Mas.png",
 "title":"Бетберденің иесі",
