--- a/server/release.json
+++ b/server/release.json
@@ -54,16 +54,16 @@
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/aot.png",
 "title":"Титандар Шабуылы",
-"grade":"25 эп • 8,6★",
+"grade":"10 из 25 эп • 8,6★",
 "info":"Көптеген жылдар бойы адамзат титандармен - ерекше ақыл-ойы жоқ, бірақ адамдарды жеп, одан ләззат алатын алып тіршілік иелерімен күресіп келеді. Ұзақ күрестен кейін адамзаттың қалдықтары титандар өте алмайтын, адамдар елін қоршап тұратын биік қабырғаларды тұрғызды. Содан бері жүз жыл өтті, адамдар қабырға қорғауында бейбіт өмір сүруде. Бірақ бір күні жасөспірім Эрен мен оның туысы Микаса қорқынышты оқиғаға тап болды - қабырғаның бір бөлігін кенет пайда болған алып титан қиратады. Титандар қалаға шабуыл жасайды, ал балалар титандардң бірі Эреннің анасын тірідей жеп жатқанына куә болды. Эрен барлық титандарды өлтіріп, адамзат үшін кек алатынына ант береді.",
 "jp":"進撃の巨人, Shingeki no Kyojin",
 "country":"Япония,  7 cәуір 2013ж",
-"info1":"25 эп. ~25мин",
-"info2":"Көп бөлімді, толығымен шықты",
+"info1":"10 из 25 эп. ~25мин",
+"info2":"Сериал, толығымен шықты",
 "info3":"Студия Wit Studio, автор Исаяма Хадзимэ",
 "is":"https://sites.google.com/view/unel-app/attack-on-titan-list",
 "description":"экшен, фэнтези, драма, хоррор",
-"note":"Ескертулер жоқ!😊"
+"note":"Студия қазақша дубляжда шығаруды уақытша тоқтатты!"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/hd-1.png",
 "title":"Сенің есімің",
