--- a/server/release.json
+++ b/server/release.json
@@ -1,12 +1,25 @@
 [ {
-"url":"https://upload.wikimedia.org/wikipedia/ru/9/92/Karate_Kid_2010.jpg",
+"url":"https://m.vk.com/photo-177853833_457245467",
+"title":"Қазақша бизнес түркияда",
+"grade":"1 эп. 9,3★",
+"jp":"Kazakh business in Turkey",
+"country":"Казахстан, 2021ж",
+"info":"«Түркиядағы қазақ бизнесі» комедиялық фильмі бес жұлдызды қонақүйлер желісінің иесі Жомарт Қанатұлы туралы жаңа оқиға.  Жомарт туыстарымен және достарымен бірге бизнесті кеңейтіп, қонақүйлердің беделін көтеруге тырысады, бірақ күлкілі жағдайлар жиі кездеседі.  Жақында өзінің қонақүйлерінің бірінде ер адам Оңтүстік Кореядан келген жаңа техниканың тұсаукесерін өткізуді жоспарлапты, оның қарамағындағылар байқаусызда сындырып алып, кәсіпкерді Сеулге жөндеуге баруға мәжбүр етті.  Бұл жолы басты кейіпкер түрік қонақүй бизнесінің қыр-сырын білу үшін Түркияға аттанады.  Ыстамбұлға келгеннен кейін оның жақын досы және іскер серіктесі Ерқош қиын жолдан шығуға болатын қиыншылыққа тап болған кезде барлық жоспарлар бұзылады.",
+"info1":"1 эп. ~1 сағат 42мин",
+"info2":"Толықметражды, шықты",
+"info3":"Студия KAZTELEPRODUCT, автор Нұрлан Қоянбаев",
+"is":"https://sites.google.com/view/unel-app/kazakh-business-in-turkey",
+"description":"Комедия",
+"note":"Ескертулер жоқ😊"
+},
+{"url":"https://upload.wikimedia.org/wikipedia/ru/9/92/Karate_Kid_2010.jpg",
 "title":"Каратэ Бала",
 "grade":"1 эп • 8,2★",
 "jp":"Karate",
 "country":"Китай, 2010ж",
 "info":"Он екі жасар Дре Паркер жалғызбасты анасымен бірге Детройттан бейтаныс Бейжіңге тіл мен жергілікті дәстүрді білмей көшіп келеді.  Мұнда ол қытай қызы Мэй Инмен танысады.  Алайда, оның жолына мәдени аласапырандықтан олардың достығын құптамайтын әкесінен бөлек, кунг-фу өнерін жетік білетін Чен бастаған бұзақылар тобы да кедергі жасайды.  Оны жеңудің жалғыз жолы - алдағы жекпе-жек турнирінде жаумен бетпе-бет келу.  Бұл жағдайда жекпе-жек шебері Хан мырза балаға көмектесуді шешеді.",
 "info1":"1 эп. ~2 сағат 34 мин",
-"info2":"Фильм, шықты",
+"info2":"Толықметражды, шықты",
 "info3":"Студия ???, автор ???",
 "is":"https://sites.google.com/view/unel-app/%D0%BA%D0%B0%D1%80%D0%B0%D1%82%D1%8D-%D0%BF%D0%B0%D1%86%D0%B0%D0%BD",
 "description":"Драма, спорт",
