--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,5 @@
 [ {
-"url":"https://m.vk.com/photo-177853833_457245467",
+"url":"https://static.kinoafisha.info/k/movie_posters/canvas/800x1200/upload/movie_posters/5/9/1/8366195/b141ce6d1d2ae38715e49777bd8f117d.jpg.webp",
 "title":"Қазақша бизнес түркияда",
 "grade":"1 эп. 9,3★",
 "jp":"Kazakh business in Turkey",
