--- a/server/release.json
+++ b/server/release.json
@@ -10,7 +10,9 @@
 "info3":"Студия MAPPA, автор Тацуки Фудзимото",
 "is":"https://sites.google.com/view/unel-app/chainsaw-man-list",
 "description":"Экшен, демоны, хоррор, сёнен",
-"note":"Ескертулер жоқ!😊"
+"note":"Ескертулер жоқ!😊",
+"episode":"1 бөлім",
+"ic_episode":"https://ok.ru/videoembed/4187764230857"
 },
 {"url":"https://dorama.land/uploads/generated/serials/0/v2/brodyaga.jpg?v=1%202x",
 "title":"Қаңғыбас",
