--- a/server/release.json
+++ b/server/release.json
@@ -12,7 +12,7 @@
 "description":"Экшен, демоны, хоррор, сёнен",
 "note":"Ескертулер жоқ!😊",
 "episode":"1 бөлім",
-"ic_episode":"https://ok.ru/videoembed/4187764230857",
+"ic_episode":"https://ok.ru/videoembed/4187764230857"
 },
 {"url":"https://dorama.land/uploads/generated/serials/0/v2/brodyaga.jpg?v=1%202x",
 "title":"Қаңғыбас",
