--- a/server/release.json
+++ b/server/release.json
@@ -1,18 +1,5 @@
 [ {
-"url":"https://d2y6mqrpjbqoe6.cloudfront.net/image/upload/f_auto,q_auto/media/library-400/74_637218453803005359Darling-Fran_Small_hq.jpg",
-"title":"Милый во Франксе",
-"jp":"Darling in the FranXX",
-"grade":"24 из 24 эп • 7,4★",
-"info":"Далекое будущее. Земля в руинах, и на остатки человечества наводят ужас таинственные гигантские формы жизни, известные как кёрю — «ревущие драконы». Чтобы противостоять им, люди создали передвижное фортификационное сооружение, названное Плантацией, где растут и обучаются юные пилоты роботов Франк...",
-"country":"Япония, қыс 2018ж",
-"info1":"24 из 24 эп. ~25мин",
-"info2":"Көп бөлімді, шықты",
-"info3":"Студия Tigger, автор Нисигори Ацуси",
-"is":"https://sites.google.com/view/unel-app/franxxx"
-"description":"меха, драма, научная фантастика",
-"note":"Аниме орысша дыбыстамада.\nАниме бета-тестерлердің сұрауы бойынша қосымшаға шығарылып отыр"
-},
-{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
+"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
 "title":"Шынжырлы Ара Адам",
 "grade":"5 из 12 эп • 8,6★",
 "info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде.",
