--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,18 @@
 [ {
-"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
+"url":"https://play-lh.googleusercontent.com/560-H8NVZRHk00g3RltRun4IGB-Ndl0I0iKy33D7EQ0cRRwH78-c46s90lZ1ho_F1so",
+"title":"Титаник",
+"jp":"Titanic",
+"grade":"1 из 1 эп. 7,9★",
+"info":"Ти­таник RMS Titanic — 20-шы ғасырдың басында салынған алып кеме. Британ кеме құру компаниясы «White Star Line»-ның «Олимпик» класындағы үш кеменің екіншісі. Ол 1909 — 1911 жылдар аралығында Белфасттағы «Харланд энд Вольф» верфінде соғылған. Сыйымдылығы 2224 адам.",
+"country":"США, 19 желтоқсан 1997ж",
+"info1":"1 из 1 эп. ~3 сағат 14мин",
+"info2":"Толықметражды, шықты",
+"info3":"Студия Titanic Studio",
+"is":"https://sites.google.com/view/unel-app/titanic",
+"description":"Романтика, драма",
+"note":"Ескертулер жоқ!😊"
+},
+{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
 "title":"Шынжырлы Ара Адам",
 "grade":"5 из 12 эп • 8,6★",
 "info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде.",
