--- a/server/release.json
+++ b/server/release.json
@@ -114,7 +114,7 @@
 "info3":"Студия  ???, автор ???",
 "is":"https://sites.google.com/view/unel-app/ssauja-gwisina",
 "description":"Комедия, Мелодрама, Мистика",
-"note":"Дорама источник-те тек 144p ден 360p арқасында ғана қолжетімді!\n⚠️Сапасы төмен болғанына біздің қатысымыз жоқ."
+"note":"Дорама источник-те тек 144p ден 360p арасында ғана қолжетімді!\n⚠️Сапасы төмен болғанына біздің қатысымыз жоқ."
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/setbyol.png",
 "title":"Сэт Бёль тәуліктік дүкені",
