--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,18 @@
 [ {
-"url":"https://sun9-78.userapi.com/impg/EUXetDPGu3sJ_rDbo08iuABmkSa1F-VDqZkUVA/vpw_ZW1lZYs.jpg?size=510x729&quality=96&sign=1d27afcfb2348e891c79aa3221402cec&type=album",
+"url":"https://c8.alamy.com/comp/D32GGR/hauru-no-ugoku-shiro-D32GGR.jpg",
+"title":"Хаулдың Жаяу Қамалы",
+"jp":"ハウルの動く城, Hauru no ugoku shiro",
+"grade":"1 эп. 8,3★",
+"info":"Зұлым сиқыршы 18 жасар Софиді кемпірге айналдырып тастады. Софи қаладан кетіп сиқырды доғару жолын іздеп кетеді. Жолда таңғажайып қозғалатын қамалды кездестіреді, қамалда мықты сиқыршы Хаул мен Кальцифер атты жынды кездестіреді. Кальцифер келісімшарт бойынша Хаулға қызмет етеді, және шарттың қандай екенін ол жария ете алмайды. Софи мен Кальцифер бір-біріне зұлым сиқырдан құтылуға көмектесуді шешеді.",
+"country":"Япония, күз 2004ж",
+"info1":"1 эп. ~119мин",
+"info2":"Толықметражды, шықты",
+"info3":"Студия Studio Ghibli, автор Диана Уинн Джонс",
+"description":"аниме, фантастика, ертегі",
+"is":"https://sites.google.com/view/unel-app/hauru-no-ugoku-shiro",
+"note":"Аниме қазіргі таңда біздің источник-те қол жетімсіз!\nБірақта осы 1 апта ішінде источник-те пайда болуына уәде береміз"
+},
+{"url":"https://sun9-78.userapi.com/impg/EUXetDPGu3sJ_rDbo08iuABmkSa1F-VDqZkUVA/vpw_ZW1lZYs.jpg?size=510x729&quality=96&sign=1d27afcfb2348e891c79aa3221402cec&type=album",
 "title":"Қатыгез қала",
 "jp":"무정도시, Heartless City",
 "grade":"20 эп. 7,7★",
