--- a/server/release.json
+++ b/server/release.json
@@ -143,7 +143,7 @@
 "description":"Комедия, Мелодрама",
 "note":"Біздің источникте қазақша субтитрмен тек 1 бөлім ғана қол жетімді, егерде дорама біздің қосымшада танымалдық жинаса қалған 15 бөлім де қосуға уәде береміз!"
 },
-{"url":"https://unel-app.github.io/api.qazverse.tv/web-server/image/Ruler-Master-of-the-Mas.png",
+{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Ruler-Master-of-the-Mas.png",
 "title":"Бетберденің иесі",
 "grade":"20 эп • 8,9★",
 "info":"Белгісіз",
@@ -156,7 +156,7 @@
 "description":"Тарихи, Дорама",
 "note":"Ескертулер жоқ!😊"
 },
-{"url":"https://unel-app.github.io/api.qazverse.tv/web-server/image/aot.png",
+{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/aot.png",
 "title":"Титандар Шабуылы",
 "grade":"10 из 25 эп • 8,6★",
 "info":"Көптеген жылдар бойы адамзат титандармен - ерекше ақыл-ойы жоқ, бірақ адамдарды жеп, одан ләззат алатын алып тіршілік иелерімен күресіп келеді. Ұзақ күрестен кейін адамзаттың қалдықтары титандар өте алмайтын, адамдар елін қоршап тұратын биік қабырғаларды тұрғызды. Содан бері жүз жыл өтті, адамдар қабырға қорғауында бейбіт өмір сүруде. Бірақ бір күні жасөспірім Эрен мен оның туысы Микаса қорқынышты оқиғаға тап болды - қабырғаның бір бөлігін кенет пайда болған алып титан қиратады. Титандар қалаға шабуыл жасайды, ал балалар титандардң бірі Эреннің анасын тірідей жеп жатқанына куә болды. Эрен барлық титандарды өлтіріп, адамзат үшін кек алатынына ант береді.",
@@ -169,7 +169,7 @@
 "description":"экшен, фэнтези, драма, хоррор",
 "note":"Студия қазақша дубляжда шығаруды уақытша тоқтатты!"
 },
-{"url":"https://unel-app.github.io/api.qazverse.tv/web-server/image/hd-1.png",
+{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/hd-1.png",
 "title":"Сенің есімің",
 "grade":"1 эп • 8,4★",
 "info":"Токио жігіті Таки мен провинциялық қыз Мицуханың арасында біртүрлі байланыс бар екенін білінеді. Түстерінде олар бір-бірінің өмірлерін сүреді. Бірақ бір күні бұл қабілет қалай пайда болса,солай кенеттен жоғалып кетеді. Таки ештеңеге қарамастан Мицуханы табуға бел буады",
