--- a/server/release.json
+++ b/server/release.json
@@ -129,7 +129,7 @@
 "description":"Комедия, Мелодрама, Мистика",
 "note":"Дорама источник-те тек 144p ден 360p арасында ғана қолжетімді!\n⚠️Сапасы төмен болғанына біздің қатысымыз жоқ."
 },
-{"url":"https://unel-app.github.io/api.qazverse.tv/web-server/image/setbyol.png",
+{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/setbyol.png",
 "title":"Сэт Бёль тәуліктік дүкені",
 "grade":"1 из 20 эп • 9,2★",
 "jp":"편의점 샛별이",
