--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,18 @@
 [ {
-"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
+"url":"https://sun9-13.userapi.com/impf/c849324/v849324462/64554/VXYqJo5UQIs.jpg?size=510x788&quality=96&sign=38f5f704455f85bc41078b9d06d3c9a1&type=album",
+"title":"Жоқ демейтін жан",
+"grade":"1 эп • 8,1★",
+"jp":"⚠️Толық ақпарат берілген жоқ!",
+"info":"⚠️Толық ақпарат берілген жоқ!",
+"country":"США",
+"info1":"1 эп. 1 сағат 36мин",
+"info2":"Толықметражды, шықты",
+"info3":"⚠️Толық ақпарат берілген жоқ!",
+"is":"https://sites.google.com/view/unel-app/unknown_movie_1",
+"description":"Комедия",
+"note":"Ескертулер жоқ!😊"
+},
+{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
 "title":"Шынжырлы Ара Адам",
 "grade":"6 из 12 эп • 8,6★",
 "info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде.",
