--- a/server/release.json
+++ b/server/release.json
@@ -36,7 +36,7 @@
 "info3":"Студия Studio Ghibli, автор Диана Уинн Джонс",
 "description":"аниме, фантастика, ертегі",
 "is":"https://sites.google.com/view/unel-app/hauru-no-ugoku-shiro",
-"note":"Аниме қазіргі таңда біздің источник-те қол жетімсіз!\nБірақта осы 1 апта ішінде источник-те пайда болуына уәде береміз"
+"note":"Ескертулер жоқ!😊"
 },
 {"url":"https://sun9-78.userapi.com/impg/EUXetDPGu3sJ_rDbo08iuABmkSa1F-VDqZkUVA/vpw_ZW1lZYs.jpg?size=510x729&quality=96&sign=1d27afcfb2348e891c79aa3221402cec&type=album",
 "title":"Қатыгез қала",
