--- a/server/release.json
+++ b/server/release.json
@@ -1,13 +1,26 @@
 [ {
-"url":"https://sun9-13.userapi.com/impf/c849324/v849324462/64554/VXYqJo5UQIs.jpg?size=510x788&quality=96&sign=38f5f704455f85bc41078b9d06d3c9a1&type=album",
+"url":"https://sun9-81.userapi.com/impf/c855328/v855328851/12bab2/z8nX2_fAR8s.jpg?size=510x767&quality=96&sign=79390f5103fe3929924cf4b11366679d&type=album",
+"title":"Құдыретті брюс",
+"jp":"Bruce Almighty",
+"info":"Пессимист Брюс Нолан — популярный ведущий теленовостей. Его ничего не интересует: ни девушка Грейс, ни собственные репортажи. Но однажды Брюса увольняют. Разочарованный герой бросает вызов Богу и неожиданно получает ответ Всевышнего. Бог предлагает Брюсу поменяться с ним местами на неделю и посмотреть, сможет ли Брюс сделать мир хоть чуточку лучше.",
+"country":"США, 2003ж",
+"grade":"1 эп. • 7,7★",
+"info1":"1 эп. 1 сағат 37мин",
+"info2":"Толықметражды, шықты",
+"info3":"Толық ақпарат берілген жоқ",
+"is":"https://sites.google.com/view/unel-app/%D2%9B%D2%B1%D0%B4%D1%8B%D1%80%D0%B5%D1%82%D1%82%D1%96-%D0%B1%D1%80%D1%8E%D1%81",
+"description":"Фэнтези, комедия, драма",
+"note":"Ескертулер жоқ!😊"
+},
+{"url":"https://sun9-13.userapi.com/impf/c849324/v849324462/64554/VXYqJo5UQIs.jpg?size=510x788&quality=96&sign=38f5f704455f85bc41078b9d06d3c9a1&type=album",
 "title":"Жоқ демейтін жан",
 "grade":"1 эп • 8,1★",
-"jp":"⚠️Толық ақпарат берілген жоқ!",
-"info":"⚠️Толық ақпарат берілген жоқ!",
+"jp":"Толық ақпарат берілген жоқ!",
+"info":"Толық ақпарат берілген жоқ!",
 "country":"США",
 "info1":"1 эп. 1 сағат 36мин",
 "info2":"Толықметражды, шықты",
-"info3":"⚠️Толық ақпарат берілген жоқ!",
+"info3":"Толық ақпарат берілген жоқ!",
 "is":"https://sites.google.com/view/unel-app/unknown_movie_1",
 "description":"Комедия",
 "note":"Ескертулер жоқ!😊"
