--- a/server/release.json
+++ b/server/release.json
@@ -5,7 +5,7 @@
 "info":"Пессимист Брюс Нолан — популярный ведущий теленовостей. Его ничего не интересует: ни девушка Грейс, ни собственные репортажи. Но однажды Брюса увольняют. Разочарованный герой бросает вызов Богу и неожиданно получает ответ Всевышнего. Бог предлагает Брюсу поменяться с ним местами на неделю и посмотреть, сможет ли Брюс сделать мир хоть чуточку лучше.",
 "country":"США, 2003ж",
 "grade":"1 эп. • 7,7★",
-"info1":"1 эп. 1 сағат 37мин",
+"info1":"1 эп. ~1 сағат 37мин",
 "info2":"Толықметражды, шықты",
 "info3":"Толық ақпарат берілген жоқ",
 "is":"https://sites.google.com/view/unel-app/%D2%9B%D2%B1%D0%B4%D1%8B%D1%80%D0%B5%D1%82%D1%82%D1%96-%D0%B1%D1%80%D1%8E%D1%81",
@@ -18,7 +18,7 @@
 "jp":"Толық ақпарат берілген жоқ!",
 "info":"Толық ақпарат берілген жоқ!",
 "country":"США",
-"info1":"1 эп. 1 сағат 36мин",
+"info1":"1 эп. ~1 сағат 36мин",
 "info2":"Толықметражды, шықты",
 "info3":"Толық ақпарат берілген жоқ!",
 "is":"https://sites.google.com/view/unel-app/unknown_movie_1",
