--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,18 @@
 [ {
-"url":"https://sun9-81.userapi.com/impf/c855328/v855328851/12bab2/z8nX2_fAR8s.jpg?size=510x767&quality=96&sign=79390f5103fe3929924cf4b11366679d&type=album",
+"url":"https://cdn.myanimelist.net/images/anime/1597/112995.jpg",
+"title":"Сырлы сөдер саябағы",
+"jp":"Koto no ha no niwa",
+"grade":"1 эп. • 7,9★",
+"info":"Такао болашақта аяқ киім дизайнері болуды армандайтын 15 жасар мектеп оқушысы. Жаңбырлы күндерде ол мектепке бармай, орнына саябаққа барып аяқ-киім сызбаларын салады. Бір күні ол саябақта Юкино атты жұмбақ әйелді кездестіреді. Бұл кездесуден кейін Такао мен Юкино саябақта бірнеше рет кездесіп, жеңіл тақырыптар туралы әңгімелесетін болды, алайда тек жаңбырлы күндері. Көп ұзамай екеуінің арасы достардан да жақын бола бастады. Бірақ, жаңбырлы маусым аяқталды...",
+"country":"Япония, көктем 2013ж",
+"info1":"1 эп. ~46мин",
+"info2":"Толықметражды, шықты",
+"info3":"Автор Синкай Макото",
+"description":"Романтика, драма",
+"note":"Ескертулер жоқ!😊",
+"is":"https://sites.google.com/view/unel-app/koto-no-ha-no-niwa"
+},
+{"url":"https://sun9-81.userapi.com/impf/c855328/v855328851/12bab2/z8nX2_fAR8s.jpg?size=510x767&quality=96&sign=79390f5103fe3929924cf4b11366679d&type=album",
 "title":"Құдыретті брюс",
 "jp":"Bruce Almighty",
 "info":"Пессимист Брюс Нолан — популярный ведущий теленовостей. Его ничего не интересует: ни девушка Грейс, ни собственные репортажи. Но однажды Брюса увольняют. Разочарованный герой бросает вызов Богу и неожиданно получает ответ Всевышнего. Бог предлагает Брюсу поменяться с ним местами на неделю и посмотреть, сможет ли Брюс сделать мир хоть чуточку лучше.",
