--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,18 @@
 [ {
-"url":"https://cdn.myanimelist.net/images/anime/1597/112995.jpg",
+"url":"https://avatars.mds.yandex.net/get-kinopoisk-image/1629390/7bd73d08-43a3-4aff-88d0-b9cc983e3d3b/600x900",
+"title":"Мен жоқ қала",
+"jp":"Boku dake ga Inai Machi",
+"grade":"12 эп. 8,6★",
+"info":"Сатору Фудзинума пицца тасушы болып жұмыс істейтін жолы болмағыр мангак (манга салушы). Бірақ оның жаман бір оқиғаның алдын алу үшін уақытпен артқа қайта алатын, өзі басқара алмайтын сиқырлы қабілеті бар. Осы қабілетпен адамдарға көмектесуді ол өзіне парыз қылып алған. Алайда, кейде өзінің жапа шегуіне тура келеді. Бір күні белгісіз біреу оның анасын өлтіріп, Сатору осыны анықтау үшін артқа 18-жылға кеткенін байқамайда қалады.",
+"country":"Япония, қыс 2016ж",
+"info1":"12 эп. ~23мин",
+"info2":"Көп бөлімді, шықты",
+"info3":"Студия A-1-Pictures, автор Самбэ Кэй",
+"description":"Драма, мистика",
+"note":"Аниме источник-те әзірше қол жетімсіз!",
+"is":"https://sites.google.com/view/unel-app/boku-dake-ga-inai-machi"
+},
+{"url":"https://cdn.myanimelist.net/images/anime/1597/112995.jpg",
 "title":"Сырлы сөдер саябағы",
 "jp":"Koto no ha no niwa",
 "grade":"1 эп. • 7,9★",
