--- a/server/release.json
+++ b/server/release.json
@@ -9,7 +9,7 @@
 "info2":"Көп бөлімді, шықты",
 "info3":"Студия A-1-Pictures, автор Самбэ Кэй",
 "description":"Драма, мистика",
-"note":"Аниме источник-те әзірше қол жетімсіз!",
+"note":"Ескертулер жоқ!😊",
 "is":"https://sites.google.com/view/unel-app/boku-dake-ga-inai-machi"
 },
 {"url":"https://cdn.myanimelist.net/images/anime/1597/112995.jpg",
