--- a/server/release.json
+++ b/server/release.json
@@ -46,7 +46,7 @@
 "country":"США",
 "info1":"1 эп. ~1 сағат 36мин",
 "info2":"Толықметражды, шықты",
-"info3":"Толық ақпарат берілген жоқ!",
+"info3":"null",
 "is":"https://sites.google.com/view/unel-app/unknown_movie_1",
 "description":"Комедия",
 "note":"Ескертулер жоқ!😊"
