--- a/server/release.json
+++ b/server/release.json
@@ -24,7 +24,8 @@
 "info3":"Автор Синкай Макото",
 "description":"Романтика, драма",
 "note":"Ескертулер жоқ!😊",
-"is":"https://sites.google.com/view/unel-app/koto-no-ha-no-niwa"
+"is":"https://sites.google.com/view/unel-app/koto-no-ha-no-niwa",
+"id":"api.unel.tv/server/episode/koto-no-ha-no-niwa.json"
 },
 {"url":"https://sun9-81.userapi.com/impf/c855328/v855328851/12bab2/z8nX2_fAR8s.jpg?size=510x767&quality=96&sign=79390f5103fe3929924cf4b11366679d&type=album",
 "title":"Құдыретті брюс",
