--- a/server/release.json
+++ b/server/release.json
@@ -38,7 +38,8 @@
 "info3":"Толық ақпарат берілген жоқ",
 "is":"https://sites.google.com/view/unel-app/%D2%9B%D2%B1%D0%B4%D1%8B%D1%80%D0%B5%D1%82%D1%82%D1%96-%D0%B1%D1%80%D1%8E%D1%81",
 "description":"Фэнтези, комедия, драма",
-"note":"Ескертулер жоқ!😊"
+"note":"Ескертулер жоқ!😊",
+"id":"https://unel-app.github.io/api.unel.tv/server/episode/bruce-almighty.json"
 },
 {"url":"https://sun9-13.userapi.com/impf/c849324/v849324462/64554/VXYqJo5UQIs.jpg?size=510x788&quality=96&sign=38f5f704455f85bc41078b9d06d3c9a1&type=album",
 "title":"Жоқ демейтін жан",
