--- a/server/release.json
+++ b/server/release.json
@@ -52,7 +52,8 @@
 "info3":"Студия MAPPA, автор Тацуки Фудзимото",
 "is":"https://sites.google.com/view/unel-app/chainsaw-man-list",
 "description":"Экшен, демоны, хоррор, сёнен",
-"note":"Ескертулер жоқ!😊"
+"note":"Ескертулер жоқ!😊",
+"id":"https://unel-app.github.io/api.unel.tv/server/episode/chainsaw-man.json"
 },
 {"url":"https://i.pinimg.com/originals/e8/59/f4/e859f43c30a207270f5539014358f5cb.jpg",
 "title":"Хаулдың Жаяу Қамалы",
