--- a/server/release.json
+++ b/server/release.json
@@ -138,9 +138,9 @@
 "info1":"1 эп. ~1 сағат 42мин",
 "info2":"Толықметражды, шықты",
 "info3":"Студия KAZTELEPRODUCT, автор Нұрлан Қоянбаев",
-"is":"https://sites.google.com/view/unel-app/kazakh-business-in-turkey",
 "description":"Комедия",
-"note":"Ескертулер жоқ😊"
+"note":"Ескертулер жоқ😊",
+"id":"api.unel.tv/server/episode/kazakh-business-in-turkey.json"
 },
 {"url":"https://upload.wikimedia.org/wikipedia/ru/9/92/Karate_Kid_2010.jpg",
 "title":"Каратэ Бала",
