--- a/server/release.json
+++ b/server/release.json
@@ -151,9 +151,9 @@
 "info1":"1 эп. ~2 сағат 34 мин",
 "info2":"Толықметражды, шықты",
 "info3":"Студия ???, автор ???",
-"is":"https://sites.google.com/view/unel-app/%D0%BA%D0%B0%D1%80%D0%B0%D1%82%D1%8D-%D0%BF%D0%B0%D1%86%D0%B0%D0%BD",
 "description":"Драма, спорт",
-"note":"Ескертулер жоқ!😊"
+"note":"Ескертулер жоқ!😊",
+"id":"https://unel-app.github.io/api.unel.tv/server/episode/karate.json"
 },
 {"url":"https://doramy.club/wp-content/uploads/2017/06/davaj-srazhatsya-prizrak.jpg",
 "title":"Елеспен Шайқас",
