--- a/server/release.json
+++ b/server/release.json
@@ -164,9 +164,9 @@
 "info1":"16 эп. ~59мин",
 "info2":"Сериал, толығымен шықты!",
 "info3":"Студия  ???, автор ???",
-"is":"https://sites.google.com/view/unel-app/ssauja-gwisina",
 "description":"Комедия, Мелодрама, Мистика",
-"note":"Дорама источник-те тек 144p ден 360p арасында ғана қолжетімді!\n⚠️Сапасы төмен болғанына біздің қатысымыз жоқ."
+"note":"Дорама источник-те тек 144p ден 360p арасында ғана қолжетімді!\n⚠️Сапасы төмен болғанына біздің қатысымыз жоқ.",
+"id":"https://unel-app.github.io/api.unel.tv/server/episode/lets-fight-ghost.json"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/setbyol.png",
 "title":"Сэт Бёль тәуліктік дүкені",
