--- a/server/release.json
+++ b/server/release.json
@@ -191,9 +191,9 @@
 "info1":"20 эп. ~59мин",
 "info2":"Сериал, толығымен шықты",
 "info3":"Студия ???, автор ???",
-"is":"https://sites.google.com/view/unel-app/the-emperor-owner-of-the-mask-list",
 "description":"Тарихи, Дорама",
-"note":"Ескертулер жоқ!😊"
+"note":"Ескертулер жоқ!😊",
+"id":"https://unel-app.github.io/api.unel.tv/server/episode/the-emperor-owner-of-the-mask.json"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/aot.png",
 "title":"Титандар Шабуылы",
