--- a/server/release.json
+++ b/server/release.json
@@ -219,5 +219,6 @@
 "info3":"Студия CoMix Wave, автор Макото Синкай.",
 "is":"https://sites.google.com/view/unel-app/kimi-no-na-wa-list",
 "description":"Романтика, мектеп, тылсым дүние",
-"note":"Ескертулер жоқ!😊"
+"note":"Ескертулер жоқ!😊",
+"id":"https://unel-app.github.io/api.unel.tv/server/episode/kimi-no-na-wa.json"
 } ]
