--- a/server/release.json
+++ b/server/release.json
@@ -1,8 +1,21 @@
 [ {
-"url":"https://avatars.mds.yandex.net/get-kinopoisk-image/1629390/7bd73d08-43a3-4aff-88d0-b9cc983e3d3b/600x900",
+"url":"https://m.media-amazon.com/images/M/MV5BMzU3OTI0MDA1Ml5BMl5BanBnXkFtZTYwNzA1NzU3._V1_.jpg",
+"title":"Жаңа полиция хикаясы",
+"jp":"New police story",
+"grade":"1 эп. • 7,4★",
+"info":"Команда инспектора Винга почти полностью уничтожена в неравной схватке с гангстерами. Чудом оставшийся в живых полицейский винит себя в смерти друзей и начинает искать забвение в алкоголе. Новый напарник инспектора, молодой офицер помогает Вингу вернуться к жизни. Вместе они бросают вызов мафии Гонконга и вступают на путь мести, чтобы наказать убийц своих товарищей.",
+"country":"Китай, 2004ж",
+"info1":"1 эп. ~2 сағат 3мин",
+"info2":"Толықметражды, шықты",
+"info3":"Режиссер Бенни Чан",
+"description":"Боевик, криминал",
+"note":"Фильм-ді қытай қазақтары дыбыстаған, дыбыс сапасына мән бермеңіздер.",
+"id":"https://unel-app.github.io/api.unel.tv/server/episode/story_new_police.json"
+},
+{"url":"https://avatars.mds.yandex.net/get-kinopoisk-image/1629390/7bd73d08-43a3-4aff-88d0-b9cc983e3d3b/600x900",
 "title":"Мен жоқ қала",
 "jp":"Boku dake ga Inai Machi",
-"grade":"12 эп. 8,6★",
+"grade":"12 эп. • 8,6★",
 "info":"Сатору Фудзинума пицца тасушы болып жұмыс істейтін жолы болмағыр мангак (манга салушы). Бірақ оның жаман бір оқиғаның алдын алу үшін уақытпен артқа қайта алатын, өзі басқара алмайтын сиқырлы қабілеті бар. Осы қабілетпен адамдарға көмектесуді ол өзіне парыз қылып алған. Алайда, кейде өзінің жапа шегуіне тура келеді. Бір күні белгісіз біреу оның анасын өлтіріп, Сатору осыны анықтау үшін артқа 18-жылға кеткенін байқамайда қалады.",
 "country":"Япония, қыс 2016ж",
 "info1":"12 эп. ~23мин",
